make toggled state more light + fix overflow

--- a/src/components/Button/_index.scss
+++ b/src/components/Button/_index.scss
@@ -44,7 +44,7 @@
     color: $color-primary;
 
     &[data-toggled="true"] {
-        background-color: darken($color-primary, 40%);
+        background-color: rgba($color-primary, 0.35);
     }
 
     &[data-toggled="false"]:hover {
